# ai-app-example

./: .gitignore  Makefile  app.py  crew.py  main.py  pyproject.toml  requirements.txt
