[project]
name = "ai-app-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "langchain>=0.3.19",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.2",
]
