[project]
name = "ai-app-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.118.0",
    "crewai-tools>=0.43.0",
    "fastapi>=0.115.12",
    "langgraph>=0.4.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "ruff>=0.11.5",
    "docformatter>=1.7.5",
]


[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
black = true
in-place = true
